--- a/page2.html
+++ b/page2.html
@@ -1,1 +1,32 @@
-\
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="page2.css">
+    <title>Business Page 1</title>
+</head>
+<body>
+    <header class=>
+        <h1>header</h1>
+    </header>
+    <section>
+        <nav>
+            <ul>
+                <li><a href="">About my business</a></li>
+                <li><a href="">Education & Certification</a></li>
+                <li><a href="">Testimonials</a></li>
+                <li><a href="">Schedule appointment!</a></li>
+                <li><a href="">Buy gift certificates here</a></li>
+            </ul>
+        </nav>
+        <article>
+            <h1>
+
+            </h1>
+        </article>
+    </section>
+</body>
+<script type="module" href="./src/page2.js"></script>
+</html>
