--- a/splash.html
+++ b/splash.html
@@ -2,11 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="splash.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Parisienne" rel="stylesheet">
+    <title>Business 1 splash page</title>
 </head>
 <body>
-    
+    <main>
+        <header>
+            <h1 id="introduction">Business Name Example</h1>
+        </header>
+        <section>
+            <h1>
+                <a href="page2.html">Enter</a>
+            </h1>
+        </section>
+        <section>
+        </section>
+    </main>
+    <br />
+    <br />
+    <br />
+    <footer id="footer">&copy; Laura Badgley 2019</footer>
+    <script type="module" src="./src/splash.js"></script>
 </body>
 </html>
