--- a/page2.html
+++ b/page2.html
@@ -9,24 +9,26 @@
 </head>
 <body>
     <header class=>
-        <h1>header</h1>
+        <h1>Personalized banner/artwork here</h1>
     </header>
     <section>
-        <nav>
+        <nav class="topnav">
             <ul>
-                <li><a href="">About my business</a></li>
-                <li><a href="">Education & Certification</a></li>
-                <li><a href="">Testimonials</a></li>
-                <li><a href="">Schedule appointment!</a></li>
-                <li><a href="">Buy gift certificates here</a></li>
+                <a href="about-business.html">About my business</a>
+                <a href="education-experience.html">Education & Experience</a>
+                <a href="testimonials.html">Testimonials</a>
+                <a href="schedule.html">Schedule an appointment</a>
+                <a href="buy-giftcards.html">Purchase gift certificates</a>
             </ul>
         </nav>
-        <article>
-            <h1>
-
-            </h1>
-        </article>
     </section>
+    <section>
+        <div class="column"></div>
+        <div class="column"></div>
+        <div class="column"></div>
+    </section>
+    <div class=row></div>
+
 </body>
 <script type="module" href="./src/page2.js"></script>
 </html>
