--- a/splash.html
+++ b/splash.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     <main>
-        <header>
-            <h1 id="introduction">Business Name Example</h1>
+        <header id="introduction">
+            <h1>Business Name Example</h1>
         </header>
         <section>
-            <h1>
+            <div id="phone">555-555-555</div>
+            <div id="location">Location, Location</div>
+        </section>
+        <section>
+            <h1 id="button">
                 <a href="page2.html">Enter</a>
             </h1>
         </section>
