--- a/splash.html
+++ b/splash.html
@@ -18,7 +18,7 @@
         </section>
         <section>
             <h1 id="button">
-                <a href="page2.html">Enter</a>
+                <a href="about-business.html">Enter</a>
             </h1>
         </section>
         <section>
